objects/Express_Web_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Express Web Activities (Account)</relationshipLabel>
        <relationshipName>Express_Web_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcitvityFunction__c</fullName>
        <label>AcitvityFunction</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityStatus__c</fullName>
        <label>ActivityStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>ActivityType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssignedTo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Express_Web_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Express Web Activities Contact</relationshipLabel>
        <relationshipName>Express_Web_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>DueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Express Web Activities</relationshipLabel>
        <relationshipName>Express_Web_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberofAttachments__c</fullName>
        <label>NumberofAttachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramName</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Express Web Activities Program</relationshipLabel>
        <relationshipName>Express_Web_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpdatedBy__c</fullName>
        <label>UpdatedBy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>UpdatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WebActivityKEY__c</fullName>
        <externalId>true</externalId>
        <label>WebActivityKEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Express Web Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Express Web Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>